--- a/paper.tex
+++ b/paper.tex
@@ -190,8 +190,8 @@ The optimizer function used was the RMSprop~\cite{dauphin2015rmsprop} with a lea
 
 \subsection{Results}
 
-The evaluation metric follow the metric used in ActivityNet Challenge to regard classification and temporal activity localization as retrieval probelm and evaluate the mAP.
-For temporal localization, a prediction is masrked correct only when it has the correct category and has IoU with ground truth instance larger than $0.5$.
+The evaluation metric follows the one used in ActivityNet Challenge with regard to classification and temporal activity localization as a retrieval problem, evaluating the mAP.
+For temporal localization, a prediction is marked correct only when it has the correct category and has IoU with ground truth instance larger than $0.5$.
 
 \begin{table}[h]
     \parbox{.45\linewidth}{
