Add one more contributor

--- a/paper.tex
+++ b/paper.tex
@@ -50,6 +50,12 @@
     Barcelona, Spain \\
     \texttt{amaia.salvador@upc.edu} \\
     \And
+    Santiago Pascual \\
+    TALP Research Center \\
+    Universitat Politècnica de Catalunya \\
+    Barcelona, Spain \\
+    \texttt{santiago.pascual@tsc.upc.edu} \\
+    \And
     Xavier Giro-i-Nieto \\
     Image Processing Group \\
     Universitat Politècnica de Catalunya \\
